# SHEM-PROJECT

./: README.md
data-gathering-protov1/: Cargo.toml  shell.nix
data-gathering-protov1/src/: gateway_sim.rs  main.rs
sms-gateway/: Cargo.toml
sms-gateway/src/: main.rs
