[package]
name = "logger"
version = "0.1.0"
edition = "2024"

[dependencies]
# The web server framework
axum = "0.7"

# The async runtime that powers the server
tokio = { version = "1.0", features = ["full"] }

# For handling and formatting dates/times
chrono = { version = "0.4", features = ["serde"] }

# Serialization/Deserialization (MUST have "derive" to work with structs)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The HTTP client for your Rust script to send requests
reqwest = { version = "0.12", features = ["json"] }

# Reads serial output from the Heltec board
serialport = "4.8.1"
